--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
  margin:0 px !important;
         }
         div {
+            margin-left:auto;
+            margin-right:auto;
 text-align: center;
-width: 100%;
+width: 50%;
 background-color: #080f13;
 border: 2px solid white;
 color:white;
