--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ text-align: center;
 width: 50%;
 background-color: #080f13;
 border: 2px solid white;
+border-radius:12px;
 color:white;
 padding:6px 0;
 font-family: 'Lato', sans-serif;
